added optimizers to trainer class, added global clipnorm

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -372,8 +372,16 @@
     "    else:\n",
     "        encoder = lfp.model.create_encoder(**model_params)\n",
     "        planner = lfp.model.create_planner(**model_params)\n",
-    "\n",
-    "    optimizer = tf.optimizers.Adam(learning_rate=args.learning_rate)\n",
+    "        \n",
+    "    trainer = lfp.train.LFPTrainer(dl, \n",
+    "                                 actor,\n",
+    "                                 encoder=encoder, \n",
+    "                                 planner=planner, \n",
+    "                                 distribute_strategy=strategy,\n",
+    "                                 learning_rate=args.learning_rate,\n",
+    "                                 clipnorm=1.0,\n",
+    "                                 gcbc=args.gcbc)\n",
+    "    \n",
     "    trainable_variables = actor.trainable_variables + encoder.trainable_variables + planner.trainable_variables\n",
     "    return actor, encoder, planner, optimizer, trainable_variables\n",
     "\n",
@@ -606,7 +614,7 @@
    },
    "outputs": [],
    "source": [
-    "v_it = iter(valid_dataset) # for the cluster fig, easier with a non distributed dataset"
+    "# v_it = iter(valid_dataset) # for the cluster fig, easier with a non distributed dataset"
    ]
   },
   {
@@ -631,47 +639,21 @@
     "    if t % valid_inc == 0:  \n",
     "        valid_x = next(valid_dataset)\n",
     "        if args.gcbc:\n",
-    "            total_val_loss = distributed_test_step(valid_x, beta)\n",
+    "            total_val_loss, metrics = distributed_test_step(valid_x, beta)\n",
     "        else:\n",
-    "            total_val_loss, ze, zp = distributed_test_step(valid_x, beta)\n",
+    "            total_val_loss, metrics, ze, zp = distributed_test_step(valid_x, beta)\n",
     "\n",
     "        # validation plotting\n",
     "        progbar.add(valid_inc, [('Train Loss', train_loss.result()), ('Validation Loss', valid_loss.result()), ('Time (s)', round(time.time() - start_time, 1))])\n",
     "\n",
-    "        wandb.log({'train_loss_result':log(train_loss),\n",
-    "                    'valid_loss_result':log(valid_loss),\n",
-    "                    'valid_position_loss_result':log(valid_position_loss),\n",
-    "                    'valid_max_position_loss_result':log(valid_max_position_loss),\n",
-    "                    'valid_rotation_loss_result':log(valid_rotation_loss),\n",
-    "                    'valid_max_rotation_loss_result':log(valid_max_rotation_loss),\n",
-    "                    'valid_gripper_loss_result':log(valid_gripper_loss),\n",
-    "                    'actor_grad_norm': log(actor_grad_norm),\n",
-    "                    'actor_grad_norm_clipped': log(actor_grad_norm_clipped),\n",
-    "                  },\n",
-    "                  step=t)\n",
-    "          \n",
-    "        if not args.gcbc:\n",
-    "            wandb.log({\n",
-    "                      'train_act_with_enc_loss_result':log(train_act_with_enc_loss),\n",
-    "                      'train_act_with_plan_loss_result':log(train_act_with_plan_loss),\n",
-    "                      'train_reg_loss_result':log(train_reg_loss),\n",
-    "                      'valid_act_with_enc_loss_result':log(valid_act_with_enc_loss),\n",
-    "                      'valid_act_with_plan_loss_result':valid_act_with_plan_loss.result(),\n",
-    "                      'valid_reg_loss_result':log(valid_reg_loss),\n",
-    "                      'beta_result':beta,\n",
-    "                      'encoder_grad_norm': log(encoder_grad_norm),\n",
-    "                      'planner_grad_norm': log(planner_grad_norm),\n",
-    "                      'encoder_grad_norm_clipped': log(encoder_grad_norm_clipped),\n",
-    "                      'planner_grad_norm_clipped': log(planner_grad_norm_clipped),\n",
-    "                    },\n",
-    "                    step=t)\n",
+    "        wandb.log(metrics, step=t)\n",
     "\n",
     "        prev_grad_norm = log(global_grad_norm)\n",
     "          \n",
     "    if t % save_inc == 0:\n",
     "        save_weights(model_path, actor, config, dl, run_id, optimizer, encoder, planner)\n",
     "        if not args.gcbc:\n",
-    "            z_enc, z_plan = produce_cluster_fig(next(v_it), encoder, planner, TEST_DATA_PATHS[0], num_take=dl.batch_size)\n",
+    "            z_enc, z_plan = produce_cluster_fig(next(valid_dataset), encoder, planner, TEST_DATA_PATHS[0], num_take=dl.batch_size)\n",
     "            wandb.log({'z_enc':z_enc, 'z_plan':z_plan}, step=t)\n",
     "            latent_fig = project_enc_and_plan(ze, zp)\n",
     "            #latent_img = plot_to_image(latent_fig)\n",
