--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -53,6 +53,19 @@
     "-tfr\n",
     "'''.split())\n",
     "\n",
+    "# args = parser.parse_args('''\n",
+    "# dummy_run \n",
+    "# --train_dataset UR5\n",
+    "# --test_dataset UR5\n",
+    "# -c\n",
+    "# -s DRIVE\n",
+    "# -d TPU\n",
+    "# -b 512\n",
+    "# -l 1024\n",
+    "# -z 256\n",
+    "# -lr 3e-4\n",
+    "# '''.split())\n",
+    "\n",
     "print(args)"
    ]
   },
@@ -201,7 +214,7 @@
     "    except ValueError:\n",
     "        raise BaseException('ERROR: Not connected to a TPU runtime; please see the previous cell in this notebook for instructions!')\n",
     "\n",
-    "    tf.args.experimental_connect_to_cluster(tpu)\n",
+    "    tf.config.experimental_connect_to_cluster(tpu)\n",
     "    tf.tpu.experimental.initialize_tpu_system(tpu)\n",
     "    strategy = tf.distribute.TPUStrategy(tpu)\n",
     "\n",
