More syntax fixes in trainer

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -390,6 +390,7 @@
     "                                 actor,\n",
     "                                 encoder=encoder, \n",
     "                                 planner=planner, \n",
+    "                                 probabilistic=args.num_distribs is not None,\n",
     "                                 distribute_strategy=strategy,\n",
     "                                 learning_rate=args.learning_rate,\n",
     "                                 clipnorm=1.0,\n",
