Syntax bugfixes and repurposing @sholto's model/optimizer save/load functions

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -396,16 +396,15 @@
     "                                 clipnorm=1.0,\n",
     "                                 gcbc=args.gcbc)\n",
     "    \n",
-    "    trainable_variables = actor.trainable_variables + encoder.trainable_variables + planner.trainable_variables\n",
-    "    return actor, encoder, planner, optimizer, trainable_variables\n",
+    "    return actor, encoder, planner\n",
     "\n",
     "if args.device=='CPU':\n",
-    "    actor, encoder, planner, optimizer, trainable_variables = train_setup()\n",
+    "    trainer = train_setup()\n",
     "    train_dataset = iter(train_dataset)\n",
     "    valid_dataset = iter(valid_dataset)\n",
     "else:\n",
     "    with strategy.scope():\n",
-    "        actor, encoder, planner, optimizer, trainable_variables = train_setup()   \n",
+    "        trainer = train_setup()   \n",
     "    train_dataset = iter(strategy.experimental_distribute_dataset(train_dataset))\n",
     "    valid_dataset = iter(strategy.experimental_distribute_dataset(valid_dataset))"
    ]
@@ -609,6 +608,7 @@
     "\n",
     "if args.resume:\n",
     "    # TODO: Fix resume id\n",
+    "    # Fix `load_optimizer_state` given we now have 3 optimizers\n",
     "    wandb.init(project=\"learning-from-play_v2\", id='12621l2h', resume=\"must\")\n",
     "    load_weights(model_path, actor, encoder, planner)\n",
     "    load_optimizer_state(optimizer, model_path, strategy, trainable_variables)\n",
