Added argparse config logging to wandb

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -610,12 +610,11 @@
     "    # TODO: Fix resume id\n",
     "    # Fix `load_optimizer_state` given we now have 3 optimizers\n",
     "    wandb.init(project=\"learning-from-play_v2\", id='12621l2h', resume=\"must\")\n",
-    "    load_weights(model_path, actor, encoder, planner)\n",
-    "    load_optimizer_state(optimizer, model_path, strategy, trainable_variables)\n",
+    "    trainer.load_weights(model_path, with_optimizer=True)\n",
     "    print('Loaded model weights and optimiser state')\n",
     "    t = wandb.run.step + valid_inc\n",
     "else:\n",
-    "    wandb.init(project=\"learning-from-play_v2\")\n",
+    "    wandb.init(project=\"learning-from-play_v2\", config=args)\n",
     "    wandb.run.name = args.run_name\n",
     "    t = 0"
    ]
