--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -46,6 +46,8 @@
     "\n",
     "\n",
     "# args = parser.parse_args()\n",
+    "\n",
+    "### Sample local config\n",
     "args = parser.parse_args('''\n",
     "dummy_run \n",
     "--train_dataset UR5\n",
@@ -53,10 +55,11 @@
     "-tfr\n",
     "'''.split())\n",
     "\n",
+    "### Sample colab config\n",
     "# args = parser.parse_args('''\n",
     "# dummy_run \n",
-    "# --train_dataset UR5\n",
-    "# --test_dataset UR5\n",
+    "# --train_dataset UR5 UR5_slow_gripper UR5_high_transition\n",
+    "# --test_dataset UR5_slow_gripper_test\n",
     "# -c\n",
     "# -s DRIVE\n",
     "# -d TPU\n",
@@ -396,7 +399,7 @@
     "                                 clipnorm=1.0,\n",
     "                                 gcbc=args.gcbc)\n",
     "    \n",
-    "    return actor, encoder, planner\n",
+    "    return trainer\n",
     "\n",
     "if args.device=='CPU':\n",
     "    trainer = train_setup()\n",
@@ -647,14 +650,14 @@
     "    start_time = time.time()\n",
     "    beta = beta_sched.scheduler(t)\n",
     "    x = next(train_dataset)\n",
-    "    total_train_loss = distributed_train_step(x, beta, prev_grad_norm)\n",
+    "    total_train_loss = trainer.distributed_train_step(x, beta, prev_grad_norm)\n",
     "    \n",
     "    if t % valid_inc == 0:  \n",
     "        valid_x = next(valid_dataset)\n",
     "        if args.gcbc:\n",
-    "            total_val_loss, metrics = distributed_test_step(valid_x, beta)\n",
+    "            total_val_loss, metrics = trainer.distributed_test_step(valid_x, beta)\n",
     "        else:\n",
-    "            total_val_loss, metrics, ze, zp = distributed_test_step(valid_x, beta)\n",
+    "            total_val_loss, metrics, ze, zp = trainer.distributed_test_step(valid_x, beta)\n",
     "\n",
     "        # validation plotting\n",
     "        progbar.add(valid_inc, [('Train Loss', train_loss.result()), ('Validation Loss', valid_loss.result()), ('Time (s)', round(time.time() - start_time, 1))])\n",
