Final syntax fix-ups

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -650,7 +650,7 @@
     "    start_time = time.time()\n",
     "    beta = beta_sched.scheduler(t)\n",
     "    x = next(train_dataset)\n",
-    "    total_train_loss = trainer.distributed_train_step(x, beta, prev_grad_norm)\n",
+    "    total_train_loss = trainer.distributed_train_step(x, beta)\n",
     "    \n",
     "    if t % valid_inc == 0:  \n",
     "        valid_x = next(valid_dataset)\n",
@@ -660,18 +660,18 @@
     "            total_val_loss, metrics, ze, zp = trainer.distributed_test_step(valid_x, beta)\n",
     "\n",
     "        # validation plotting\n",
-    "        progbar.add(valid_inc, [('Train Loss', train_loss.result()), ('Validation Loss', valid_loss.result()), ('Time (s)', round(time.time() - start_time, 1))])\n",
+    "        progbar.add(valid_inc, [('Train Loss', metrics['train_loss']), \n",
+    "                                ('Validation Loss', metrics['valid_loss']), \n",
+    "                                ('Time (s)', round(time.time() - start_time, 1))])\n",
     "\n",
     "        wandb.log(metrics, step=t)\n",
-    "\n",
-    "        prev_grad_norm = log(global_grad_norm)\n",
     "          \n",
     "    if t % save_inc == 0:\n",
-    "        save_weights(model_path, actor, config, dl, run_id, optimizer, encoder, planner)\n",
+    "        trainer.save_weights(model_path, args)\n",
     "        if not args.gcbc:\n",
-    "            z_enc, z_plan = produce_cluster_fig(next(valid_dataset), encoder, planner, TEST_DATA_PATHS[0], num_take=dl.batch_size)\n",
-    "            wandb.log({'z_enc':z_enc, 'z_plan':z_plan}, step=t)\n",
-    "            latent_fig = project_enc_and_plan(ze, zp)\n",
+    "            # z_enc, z_plan = lfp.plotting.produce_cluster_fig(next(valid_dataset), trainer.encoder, trainer.planner, TEST_DATA_PATHS[0], num_take=dl.batch_size)\n",
+    "            # wandb.log({'z_enc':z_enc, 'z_plan':z_plan}, step=t)\n",
+    "            latent_fig = lfp.plotting.project_enc_and_plan(ze, zp)\n",
     "            #latent_img = plot_to_image(latent_fig)\n",
     "    t += 1"
    ]
