Fixing up gcs pathing and globbing

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -102,6 +102,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "from pathy import Pathy\n",
     "import os\n",
     "import requests\n",
     "import json\n",
@@ -168,7 +169,7 @@
     "    project_id = 'learning-from-play-303306'\n",
     "    bucket_name = 'lfp_iowa_bucket'\n",
     "    auth.authenticate_user()\n",
-    "    STORAGE_PATH = Path(f'gs://{bucket_name}')\n",
+    "    STORAGE_PATH = Pathy(f'gs://{bucket_name}')\n",
     "else:\n",
     "    print('Reading data from local filesystem')\n",
     "    STORAGE_PATH = WORKING_PATH\n",
@@ -375,10 +376,10 @@
    "source": [
     "def train_setup():\n",
     "    model_params = {'obs_dim':dl.obs_dim,\n",
-    "                'goal_dim':dl.goal_dim,\n",
-    "                'act_dim':dl.act_dim,\n",
-    "                'layer_size':args.layer_size, \n",
-    "                'latent_dim':args.latent_dim}\n",
+    "                    'goal_dim':dl.goal_dim,\n",
+    "                    'act_dim':dl.act_dim,\n",
+    "                    'layer_size':args.layer_size, \n",
+    "                    'latent_dim':args.latent_dim}\n",
     "    \n",
     "    actor = lfp.model.create_actor(**model_params, gcbc=args.gcbc, num_distribs=args.num_distribs)\n",
     "\n",
