Changed gcs bucket name

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -167,7 +167,7 @@
     "    if region != 'Iowa':\n",
     "        logging.warning(f'You are accessing GCS data from {region}, outside of Iowa region')\n",
     "    project_id = 'learning-from-play-303306'\n",
-    "    bucket_name = 'lfp_iowa_bucket'\n",
+    "    bucket_name = 'iowa_bucket_lfp'\n",
     "    auth.authenticate_user()\n",
     "    STORAGE_PATH = Pathy(f'gs://{bucket_name}')\n",
     "else:\n",
