changed default workers to 1, added pathy to reqs

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -61,7 +61,8 @@
     "# --train_dataset UR5 UR5_slow_gripper UR5_high_transition\n",
     "# --test_dataset UR5_slow_gripper_test\n",
     "# -c\n",
-    "# -s DRIVE\n",
+    "# -tfr\n",
+    "# -s GCS\n",
     "# -d TPU\n",
     "# -b 512\n",
     "# -l 1024\n",
