Added autotune num_workers

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -278,7 +278,7 @@
    "outputs": [],
    "source": [
     "GLOBAL_BATCH_SIZE = args.batch_size * NUM_DEVICES\n",
-    "dl = lfp.data.PlayDataloader(batch_size=GLOBAL_BATCH_SIZE)"
+    "dl = lfp.data.PlayDataloader(batch_size=GLOBAL_BATCH_SIZE, num_workers=tf.data.experimental.AUTOTUNE)"
    ]
   },
   {
