--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -939,47 +939,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1HejtDH_Yx8h",
-        "outputId": "de62feeb-9151-4167-a1f6-bfba0822f3bd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "1HejtDH_Yx8h"
       },
       "source": [
         "# Use this to edit modules without needing to restart the kernel\n",
-        "!git pull\n",
-        "import importlib\n",
-        "importlib.reload(lfp.data)\n",
-        "importlib.reload(lfp.model)\n",
-        "importlib.reload(lfp.plotting)\n",
-        "importlib.reload(lfp.train)\n"
+        "# !git pull\n",
+        "# import importlib\n",
+        "# importlib.reload(lfp.data)\n",
+        "# importlib.reload(lfp.model)\n",
+        "# importlib.reload(lfp.plotting)\n",
+        "# importlib.reload(lfp.train)\n"
       ],
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Updating 3d0fc6c..71da569\n",
-            "error: Your local changes to the following files would be overwritten by merge:\n",
-            "\tlfp/plotting.py\n",
-            "Please commit your changes or stash them before you merge.\n",
-            "Aborting\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<module 'lfp.train' from '/content/learning_from_play/lfp/train.py'>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 58
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1378,17 +1350,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xjnc22FOGae1"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 23,
-      "outputs": []
     },
     {
       "cell_type": "code",
