--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -103,7 +103,7 @@
         "    'learning_rate':3e-4,\n",
         "}"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zMJ___6ARZ4u",
-        "outputId": "b1859f6a-2c5c-4b92-be14-4274cb581890"
+        "outputId": "e3c24865-e973-4a55-de19-90a27528803b"
       },
       "source": [
         "#@title Workpace Setup (Local vs Colab)\n",
@@ -148,7 +148,7 @@
         "TRAIN_DATA_PATHS = [STORAGE_PATH/'data'/x for x in config['train_datasets']]\n",
         "TEST_DATA_PATHS = [STORAGE_PATH/'data'/x for x in config['test_datasets']]"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6zbmq324x2yv",
-        "outputId": "d7d4457c-5baf-4ae0-d3f4-f015547e2a4e"
+        "outputId": "c2ce8f54-7cb0-439a-e8a1-c9b288d37639"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -238,7 +238,7 @@
         "    NUM_DEVICES = 1\n",
         "    print(physical_devices)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -553,7 +553,7 @@
         "import lfp\n",
         "from natsort import natsorted"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -563,7 +563,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1HejtDH_Yx8h",
-        "outputId": "85e0bacd-68ef-4a3f-99a5-45dd20587be2"
+        "outputId": "154af207-6fc0-4520-da25-092e955ae162"
       },
       "source": [
         "# Use this to edit modules without needing to restart the kernel\n",
@@ -572,7 +572,7 @@
         "importlib.reload(lfp.model)\n",
         "importlib.reload(lfp.train)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +584,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -606,7 +606,7 @@
         "GLOBAL_BATCH_SIZE = config['batch_size'] * NUM_DEVICES\n",
         "dl = lfp.data.PlayDataloader(batch_size=GLOBAL_BATCH_SIZE)"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -616,21 +616,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uiz4AXCnFdTv",
-        "outputId": "7215c99e-286c-476d-a283-29855cb9dc2d"
+        "outputId": "f8b23946-28d3-42a9-cba7-7d6ca237f66c"
       },
       "source": [
         "# Train data\n",
         "train_data = dl.extract(TRAIN_DATA_PATHS)\n",
         "train_dataset = dl.load(train_data)"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "UR5: 100%|██████████| 52/52 [00:00<00:00, 59.08it/s]\n",
-            "UR5_slow_gripper: 100%|██████████| 23/23 [00:00<00:00, 54.86it/s]\n",
-            "UR5_high_transition: 100%|██████████| 32/32 [00:00<00:00, 64.12it/s]\n"
+            "UR5: 100%|██████████| 52/52 [00:00<00:00, 62.33it/s]\n",
+            "UR5_slow_gripper: 100%|██████████| 23/23 [00:00<00:00, 59.51it/s]\n",
+            "UR5_high_transition: 100%|██████████| 32/32 [00:00<00:00, 68.21it/s]\n"
           ],
           "name": "stderr"
         },
@@ -656,19 +656,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h8ZDAVpLFdTw",
-        "outputId": "d8fc4b12-9c25-492f-8a21-424de4d14f07"
+        "outputId": "e21a50ec-35e0-4b34-f21a-e9452e5fa0b2"
       },
       "source": [
         "# Validation data\n",
         "valid_data = dl.extract(TEST_DATA_PATHS)\n",
         "valid_dataset = dl.load(valid_data)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "UR5_slow_gripper_test: 100%|██████████| 2/2 [00:00<00:00, 53.01it/s]"
+            "UR5_slow_gripper_test: 100%|██████████| 2/2 [00:00<00:00, 50.71it/s]\n"
           ],
           "name": "stderr"
         },
@@ -684,13 +684,6 @@
             "    'tstep_idxs': TensorSpec(shape=(4096, None, 1), dtype=tf.int32, name=None)}\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
@@ -725,7 +718,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-3r_TDl7v9E7",
-        "outputId": "1ace831a-72f1-4ac4-dfc6-95012e7eac8b"
+        "outputId": "113c38be-7858-4843-bf36-a9ada4faf62e"
       },
       "source": [
         "from tensorflow.keras.losses import MeanSquaredError\n",
@@ -741,7 +734,7 @@
         "import wandb\n",
         "wandb.login()"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +753,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -772,7 +765,7 @@
       "source": [
         ""
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -784,7 +777,7 @@
         "from lfp.metric import MaxMetric, create_metrics, record, log_action_breakdown\n",
         "from lfp.train import LFPTrainer"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -909,7 +902,8 @@
         "                                lambda: tf.clip_by_global_norm(gradients, prev_global_grad_norm)[0],\n",
         "                                lambda: gradients)  # must get[0] as it returns new norm as [1]\n",
         "\n",
-        "\n",
+        "            planner_grads = [g * 10 for g in planner_grads]\n",
+        "            \n",
         "            actor_norm_clipped = record(tf.linalg.global_norm(actor_gradients), actor_grad_norm_clipped)\n",
         "            encoder_norm_clipped = record(tf.linalg.global_norm(encoder_gradients), encoder_grad_norm_clipped)\n",
         "            planner_norm_clipped = record(tf.linalg.global_norm(planner_gradients), planner_grad_norm_clipped)\n",
@@ -1118,9 +1112,10 @@
         "from lfp.plotting import produce_cluster_fig, project_enc_and_plan, plot_to_image\n",
         "v_it = iter(valid_dataset) #for the cluster fig, easier with a non distributed dataset\n",
         "\n",
-        "def log(metric):\n",
+        "def log(metric, reset=True):\n",
         "  result = metric.result()\n",
-        "  metric.reset_states()\n",
+        "  if reset:\n",
+        "    metric.reset_states()\n",
         "  return result"
       ],
       "execution_count": null,
@@ -1149,13 +1144,13 @@
         "        progbar.add(valid_inc, [('Train Loss', train_loss.result()), ('Validation Loss', valid_loss.result()), ('Time (s)', round(time.time() - start_time, 1))])\n",
         "\n",
         "\n",
-        "        wandb.log({'train_loss_result':log(train_loss),\n",
-        "                    'valid_loss_result':log(valid_loss),\n",
-        "                    'valid_position_loss_result':log(valid_position_loss),\n",
-        "                    'valid_max_position_loss_result':log(valid_max_position_loss),\n",
-        "                    'valid_rotation_loss_result':log(valid_rotation_loss),\n",
-        "                    'valid_max_rotation_loss_result':log(valid_max_rotation_loss),\n",
-        "                    'valid_gripper_loss_result':log(valid_gripper_loss),\n",
+        "        wandb.log({'train_loss_result':log(train_loss, reset=False),\n",
+        "                    'valid_loss_result':log(valid_loss, reset=False),\n",
+        "                    'valid_position_loss_result':log(valid_position_loss, reset=False),\n",
+        "                    'valid_max_position_loss_result':log(valid_max_position_loss, reset=False),\n",
+        "                    'valid_rotation_loss_result':log(valid_rotation_loss, reset=False),\n",
+        "                    'valid_max_rotation_loss_result':log(valid_max_rotation_loss, reset=False),\n",
+        "                    'valid_gripper_loss_result':log(valid_gripper_loss, reset=False),\n",
         "                    'actor_grad_norm': log(actor_grad_norm),\n",
         "                    'actor_grad_norm_clipped': log(actor_grad_norm_clipped),\n",
         "                    'valid_position_loss':log(valid_position_loss),\n",
@@ -1168,12 +1163,12 @@
         "          \n",
         "        if not config['gcbc']:\n",
         "          wandb.log({\n",
-        "                      'train_act_with_enc_loss_result':log(train_act_with_enc_loss),\n",
-        "                      'train_act_with_plan_loss_result':log(train_act_with_plan_loss),\n",
-        "                      'train_reg_loss_result':log(train_reg_loss),\n",
-        "                      'valid_act_with_enc_loss_result':log(valid_act_with_enc_loss),\n",
-        "                      'valid_act_with_plan_loss_result':valid_act_with_plan_loss.result(),\n",
-        "                      'valid_reg_loss_result':log(valid_reg_loss),\n",
+        "                      'train_act_with_enc_loss_result':log(train_act_with_enc_loss, reset=False),\n",
+        "                      'train_act_with_plan_loss_result':log(train_act_with_plan_loss, reset=False),\n",
+        "                      'train_reg_loss_result':log(train_reg_loss, reset=False),\n",
+        "                      'valid_act_with_enc_loss_result':log(valid_act_with_enc_loss, reset=False),\n",
+        "                      'valid_act_with_plan_loss_result':log(valid_act_with_plan_loss, reset=False),\n",
+        "                      'valid_reg_loss_result':log(valid_reg_loss, reset=False),\n",
         "                      'beta_result':beta,\n",
         "                      'encoder_grad_norm': log(encoder_grad_norm),\n",
         "                      'planner_grad_norm': log(planner_grad_norm),\n",
@@ -1183,7 +1178,7 @@
         "                      'train_act_with_plan_loss':log(train_act_with_plan_loss),\n",
         "                      'train_reg_loss':log(train_reg_loss),\n",
         "                      'valid_act_with_enc_loss':log(valid_act_with_enc_loss),\n",
-        "                      'valid_act_with_plan_loss':valid_act_with_plan_loss.result(),\n",
+        "                      'valid_act_with_plan_loss':log(valid_act_with_plan_loss),\n",
         "                      'valid_reg_loss':log(valid_reg_loss),\n",
         "                    },\n",
         "                    step=t)\n",
