afaik bringing it fully in to line with prev

--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -25,6 +25,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ok():\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.b =5\n",
+    "        def s(x,y):\n",
+    "            return x+y+self.b\n",
+    "        \n",
+    "        self.s = s\n",
+    "        \n",
+    "        \n",
+    "o = ok()        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o.s(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o.b=3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
