--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -99,7 +99,7 @@
     "GCBC = False\n",
     "PROBABILISTIC = False\n",
     "QUANTISED = False\n",
-    "PROPRIOCEPTION = False\n",
+    "gripper_proprioception = False\n",
     "arm = 'UR5'\n",
     "\n"
    ]
@@ -116,7 +116,7 @@
     "\n",
     "def transform_states(data):\n",
     "\n",
-    "  obs, acts, achieved_goals, joint_poses, target_poses, acts_quat, acts_rpy_rel, velocities, obs_quat, proprioception, sequence_index, sequence_id = data['obs'], data['acts'], data['achieved_goals'], data['joint_poses'], data['target_poses'], data['acts_quat'], data['acts_rpy_rel'], data['velocities'], data['obs_quat'], data['proprioception'], data['sequence_index'], data['sequence_id']\n",
+    "  obs, acts, achieved_goals, joint_poses, target_poses, acts_quat, acts_rpy_rel, velocities, obs_quat, gripper_proprioception, sequence_index, sequence_id = data['obs'], data['acts'], data['achieved_goals'], data['joint_poses'], data['target_poses'], data['acts_quat'], data['acts_rpy_rel'], data['velocities'], data['obs_quat'], data['gripper_proprioception'], data['sequence_index'], data['sequence_id']\n",
     "  \n",
     "  img = tf.io.read_file(data['im_path'])\n",
     "  #img = tf.io.decode_png(img, channels=3)\n",
@@ -131,7 +131,7 @@
     "            'acts_rpy_rel': acts_rpy_rel,\n",
     "            'velocities': velocities,\n",
     "            'obs_quat': obs_quat,\n",
-    "            'proprioception': proprioception,\n",
+    "            'gripper_proprioception': gripper_proprioception,\n",
     "            'sequence_index': sequence_index,\n",
     "            'sequence_id': sequence_id,\n",
     "            'img':img,\n",
@@ -143,7 +143,7 @@
     "\n",
     "def serialise(data):\n",
     "    \n",
-    "    obs, acts, achieved_goals, joint_poses, target_poses, acts_quat, acts_rpy_rel, velocities, obs_quat, proprioception, sequence_index, sequence_id, img = data['obs'], data['acts'], data['achieved_goals'], data['joint_poses'], data['target_poses'], data['acts_quat'], data['acts_rpy_rel'], data['velocities'], data['obs_quat'], data['proprioception'], data['sequence_index'], data['sequence_id'], data['img']\n",
+    "    obs, acts, achieved_goals, joint_poses, target_poses, acts_quat, acts_rpy_rel, velocities, obs_quat, gripper_proprioception, sequence_index, sequence_id, img = data['obs'], data['acts'], data['achieved_goals'], data['joint_poses'], data['target_poses'], data['acts_quat'], data['acts_rpy_rel'], data['velocities'], data['obs_quat'], data['gripper_proprioception'], data['sequence_index'], data['sequence_id'], data['img']\n",
     "    \n",
     "    #image_feature = Feature(bytes_list=BytesList(value=[tf.io.serialize_tensor(image).numpy(),]))\n",
     "    \n",
@@ -156,7 +156,7 @@
     "    acts_rpy_rel = Feature(bytes_list=BytesList(value=[tf.io.serialize_tensor(acts_rpy_rel).numpy(),])) \n",
     "    velocities = Feature(bytes_list=BytesList(value=[tf.io.serialize_tensor(velocities).numpy(),])) \n",
     "    obs_quat = Feature(bytes_list=BytesList(value=[tf.io.serialize_tensor(obs_quat).numpy(),]))\n",
-    "    proprioception = Feature(bytes_list=BytesList(value=[tf.io.serialize_tensor(proprioception).numpy(),])) \n",
+    "    gripper_proprioception = Feature(bytes_list=BytesList(value=[tf.io.serialize_tensor(gripper_proprioception).numpy(),])) \n",
     "    sequence_index =  Feature(int64_list=Int64List(value=[sequence_index,]))\n",
     "    sequence_id = Feature(int64_list=Int64List(value=[sequence_id,]))\n",
     "    img = Feature(bytes_list=BytesList(value=[img.numpy(),]))\n",
@@ -172,7 +172,7 @@
     "                'acts_rpy_rel': acts_rpy_rel,\n",
     "                'velocities': velocities,\n",
     "                'obs_quat': obs_quat,\n",
-    "                'proprioception': proprioception,\n",
+    "                'gripper_proprioception': gripper_proprioception,\n",
     "                'sequence_index': sequence_index,\n",
     "                'sequence_id': sequence_id,\n",
     "                'img': img,\n",
@@ -304,7 +304,7 @@
    ],
    "source": [
     "paths = TRAIN_DATA_PATHS\n",
-    "keys = ['obs','acts','achieved_goals','joint_poses','target_poses','acts_quat','acts_rpy_rel','velocities','obs_quat','proprioception']\n",
+    "keys = ['obs','acts','achieved_goals','joint_poses','target_poses','acts_quat','acts_rpy_rel','velocities','obs_quat','gripper_proprioception']\n",
     "\n",
     "\n",
     "for path in paths:\n",
@@ -522,7 +522,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ParallelMapDataset shapes: {obs: <unknown>, acts: <unknown>, achieved_goals: <unknown>, joint_poses: <unknown>, target_poses: <unknown>, acts_quat: <unknown>, acts_rpy_rel: <unknown>, velocities: <unknown>, obs_quat: <unknown>, proprioception: <unknown>, sequence_index: (), sequence_id: (), img: (200, 200, 3)}, types: {obs: tf.float32, acts: tf.float32, achieved_goals: tf.float32, joint_poses: tf.float32, target_poses: tf.float32, acts_quat: tf.float32, acts_rpy_rel: tf.float32, velocities: tf.float32, obs_quat: tf.float32, proprioception: tf.float32, sequence_index: tf.int32, sequence_id: tf.int32, img: tf.float32}>\n"
+      "<ParallelMapDataset shapes: {obs: <unknown>, acts: <unknown>, achieved_goals: <unknown>, joint_poses: <unknown>, target_poses: <unknown>, acts_quat: <unknown>, acts_rpy_rel: <unknown>, velocities: <unknown>, obs_quat: <unknown>, gripper_proprioception: <unknown>, sequence_index: (), sequence_id: (), img: (200, 200, 3)}, types: {obs: tf.float32, acts: tf.float32, achieved_goals: tf.float32, joint_poses: tf.float32, target_poses: tf.float32, acts_quat: tf.float32, acts_rpy_rel: tf.float32, velocities: tf.float32, obs_quat: tf.float32, gripper_proprioception: tf.float32, sequence_index: tf.int32, sequence_id: tf.int32, img: tf.float32}>\n"
      ]
     }
    ],
@@ -544,7 +544,7 @@
     "            'acts_rpy_rel': tf.io.FixedLenFeature([], tf.string), # tf.string means bytestring,\n",
     "            'velocities': tf.io.FixedLenFeature([], tf.string), # tf.string means bytestring,\n",
     "            'obs_quat': tf.io.FixedLenFeature([], tf.string), # tf.string means bytestring,\n",
-    "            'proprioception': tf.io.FixedLenFeature([], tf.string), # tf.string means bytestring,\n",
+    "            'gripper_proprioception': tf.io.FixedLenFeature([], tf.string), # tf.string means bytestring,\n",
     "            'sequence_index': tf.io.FixedLenFeature([], tf.int64),\n",
     "            'sequence_id': tf.io.FixedLenFeature([], tf.int64),\n",
     "            'img': tf.io.FixedLenFeature([], tf.string), # tf.string means bytestring,\n",
@@ -560,7 +560,7 @@
     "    acts_rpy_rel = tf.io.parse_tensor(data['acts_rpy_rel'], tf.float32)  \n",
     "    velocities = tf.io.parse_tensor(data['velocities'], tf.float32) \n",
     "    obs_quat = tf.io.parse_tensor(data['obs_quat'], tf.float32) \n",
-    "    proprioception = tf.io.parse_tensor(data['proprioception'], tf.float32)  \n",
+    "    gripper_proprioception = tf.io.parse_tensor(data['gripper_proprioception'], tf.float32)  \n",
     "    sequence_index = tf.cast(data['sequence_index'], tf.int32) \n",
     "    sequence_id = tf.cast(data['sequence_id'], tf.int32) # this is meant to be 32 even though you serialize as 64\n",
     "    \n",
@@ -575,7 +575,7 @@
     "            'acts_rpy_rel' : acts_rpy_rel, \n",
     "            'velocities' : velocities, \n",
     "            'obs_quat' : obs_quat, \n",
-    "            'proprioception' : proprioception, \n",
+    "            'gripper_proprioception' : gripper_proprioception, \n",
     "            'sequence_index' : sequence_index, \n",
     "            'sequence_id' : sequence_id,\n",
     "            'img' : img}\n",
@@ -721,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs, acts, achieved_goals, joint_poses, target_poses, acts_quat, acts_rpy_rel, velocities, obs_quat, proprioception, sequence_index, sequence_id,img = b "
+    "obs, acts, achieved_goals, joint_poses, target_poses, acts_quat, acts_rpy_rel, velocities, obs_quat, gripper_proprioception, sequence_index, sequence_id,img = b "
    ]
   },
   {
@@ -959,7 +959,7 @@
     "if VELOCITY:\n",
     "    OBS_DIM += dataset['velocities'].shape[1]\n",
     "    \n",
-    "if PROPRIOCEPTION:\n",
+    "if gripper_proprioception:\n",
     "    OBS_DIM += 1\n",
     "        \n",
     "GOAL_DIM = dataset['achieved_goals'].shape[1]\n",
@@ -1073,8 +1073,8 @@
     "    if VELOCITY:\n",
     "      obs = tf.concat([obs, dataset['velocities']], axis = -1)\n",
     "    \n",
-    "    if PROPRIOCEPTION:\n",
-    "      obs = tf.concat([obs, dataset['proprioception']], axis = -1)\n",
+    "    if gripper_proprioception:\n",
+    "      obs = tf.concat([obs, dataset['gripper_proprioception']], axis = -1)\n",
     "    \n",
     "    # Variable Seq len\n",
     "    if VARIABLE_SEQ_LENS:\n",
@@ -1794,7 +1794,7 @@
        "         1.44205269e-01,  4.97406842e-03,  5.21130208e-16,  3.39072490e-16,\n",
        "         7.07106781e-01,  7.07106781e-01,  7.28993388e-17,  0.00000000e+00,\n",
        "         1.12222222e-02,  0.00000000e+00]),\n",
-       " 'gripper_proprioception': 0}"
+       " 'gripper_gripper_proprioception': 0}"
       ]
      },
      "execution_count": 23,
@@ -2018,9 +2018,9 @@
     "        \n",
     "    if VELOCITY:\n",
     "        o = tf.concat([tf.cast(o, tf.float32),tf.expand_dims(tf.expand_dims(tf.cast(obs_dict['velocity'],tf.float32),0),0)], axis = -1)\n",
-    "    if PROPRIOCEPTION:\n",
+    "    if gripper_proprioception:\n",
     "         \n",
-    "         o = tf.concat([tf.cast(o, tf.float32),tf.expand_dims(tf.expand_dims(tf.cast([obs_dict['gripper_proprioception']],tf.float32),0),0)], axis = -1)\n",
+    "         o = tf.concat([tf.cast(o, tf.float32),tf.expand_dims(tf.expand_dims(tf.cast([obs_dict['gripper_gripper_proprioception']],tf.float32),0),0)], axis = -1)\n",
     "    #obs = (obs - hyper_params['means_obs'])/hyper_params['stds_obs']\n",
     "    if record_o_buff is not None:\n",
     "        record_o_buff.append(o)\n",
