--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -113,7 +113,7 @@
     "GCBC = False\n",
     "PROBABILISTIC = False\n",
     "QUANTISED = False\n",
-    "PROPRIOCEPTION = False\n",
+    "gripper_proprioception = False\n",
     "arm = 'UR5'\n",
     "\n"
    ]
@@ -466,7 +466,7 @@
        "         1.49018700e-01, -3.29016431e-05,  6.45653514e-14,  4.49437392e-14,\n",
        "         7.07106781e-01,  7.07106781e-01,  7.33092205e-17,  0.00000000e+00,\n",
        "         1.12222222e-02,  0.00000000e+00]),\n",
-       " 'gripper_proprioception': 0}"
+       " 'gripper_gripper_proprioception': 0}"
       ]
      },
      "execution_count": 41,
@@ -701,9 +701,9 @@
     "        \n",
     "    if VELOCITY:\n",
     "        o = tf.concat([tf.cast(o, tf.float32),tf.expand_dims(tf.expand_dims(tf.cast(obs_dict['velocity'],tf.float32),0),0)], axis = -1)\n",
-    "    if PROPRIOCEPTION:\n",
+    "    if gripper_proprioception:\n",
     "         \n",
-    "         o = tf.concat([tf.cast(o, tf.float32),tf.expand_dims(tf.expand_dims(tf.cast([obs_dict['gripper_proprioception']],tf.float32),0),0)], axis = -1)\n",
+    "         o = tf.concat([tf.cast(o, tf.float32),tf.expand_dims(tf.expand_dims(tf.cast([obs_dict['gripper_gripper_proprioception']],tf.float32),0),0)], axis = -1)\n",
     "    #obs = (obs - hyper_params['means_obs'])/hyper_params['stds_obs']\n",
     "    if record_o_buff is not None:\n",
     "        record_o_buff.append(o)\n",
