--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -220,7 +220,8 @@
     "                'act_dim':dl.act_dim,\n",
     "                'latent_dim':LATENT_DIM}\n",
     "\n",
-    "actor = lfp.model.create_actor(layer_size=LAYER_SIZE, gcbc=GCBC, num_distribs=None, **model_params)\n",
+    "actor = lfp.model.create_actor(**model_params, gcbc=args.gcbc, num_distribs=args.num_distribs, qbits=args.qbits)\n",
+    "\n",
     "\n",
     "if GCBC:\n",
     "    encoder = None\n",
