--- a/notebooks/train_lfp.ipynb
+++ b/notebooks/train_lfp.ipynb
@@ -177,7 +177,7 @@
     "parser.add_argument('-la', '--actor_layer_size', default=2048, type=int, help='Layer size of actor, increases size of neural net')\n",
     "parser.add_argument('-le', '--encoder_layer_size', default=512, type=int, help='Layer size of encoder, increases size of neural net')\n",
     "parser.add_argument('-lp', '--planner_layer_size', default=512, type=int, help='Layer size of planner, increases size of neural net')\n",
-    "parser.add_argument('-embd', '--img_embedding_size', default=256, type=int, help='Embedding size of features,goal space')\n",
+    "parser.add_argument('-embd', '--img_embedding_size', default=64, type=int, help='Embedding size of features,goal space')\n",
     "parser.add_argument('-z', '--latent_dim', default=256, type=int, help='Size of the VAE latent space')\n",
     "parser.add_argument('-g', '--gcbc', default=False, action='store_true', help='Enables GCBC, a simpler model with no encoder/planner')\n",
     "parser.add_argument('-n', '--num_distribs', default=None, type=int, help='Number of distributions to use in logistic mixture model')\n",
@@ -783,7 +783,7 @@
     "                'act_dim':dl.act_dim,\n",
     "                'layer_size':args.actor_layer_size, \n",
     "                'latent_dim':args.latent_dim}\n",
-    "    \n",
+    "\n",
     "    actor = lfp.model.create_actor(**model_params, gcbc=args.gcbc, num_distribs=args.num_distribs, qbits=args.qbits)\n",
     "\n",
     "    if args.gcbc:\n",
@@ -796,9 +796,10 @@
     "        planner = lfp.model.create_planner(**model_params)\n",
     "\n",
     "    if args.images:\n",
-    "      cnn = lfp.model.create_vision_network(dl.img_size, dl.img_size, embedding_size=args.img_embedding_size)\n",
+    "        cnn = lfp.model.cnn(dl.img_size, dl.img_size, embedding_size=args.img_embedding_size)\n",
+    "        utils.build_cnn(cnn) # Have to do this becasue it is subclassed and the reshapes in the spatial softmax don't play nice with model auto build\n",
     "    else:\n",
-    "      cnn = None\n",
+    "        cnn = None\n",
     "\n",
     "    optimizer = tf.optimizers.Adam(learning_rate=args.learning_rate)\n",
     "    trainer = LFPTrainer(actor, encoder, planner, cnn, optimizer, strategy, args, dl, GLOBAL_BATCH_SIZE)\n",
