added spatial softmax

--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -263,7 +263,7 @@
     "    \n",
     "if args.images:\n",
     "    cnn = lfp.model.cnn(dl.img_size, dl.img_size, embedding_size=args.img_embedding_size)\n",
-    "    utils.build_cnn(cnn) # Have to do this becasue it is subclassed and the reshapes in the spatial softmax don't play nice with model auto build\n",
+    "    lfp.utils.build_cnn(cnn) # Have to do this becasue it is subclassed and the reshapes in the spatial softmax don't play nice with model auto build\n",
     "else:\n",
     "    cnn = None"
    ]
