latent plotting with images is tough on RAM

--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -529,7 +529,7 @@
    "source": [
     "def decode_image(image_data):\n",
     "    image = tf.image.decode_jpeg(image_data, channels=3)\n",
-    "    image = tf.cast(image, tf.float32) / 255.0  # convert image to floats in [0, 1] range\n",
+    "    #image = tf.cast(image, tf.float32) / 255.0  # convert image to floats in [0, 1] range\n",
     "    image = tf.reshape(image, [200,200, 3]) # explicit size needed for TPU\n",
     "    return image\n",
     "\n",
