add instructions to the cell

--- a/env/colab_vscode.ipynb
+++ b/env/colab_vscode.ipynb
@@ -25,6 +25,9 @@
    "source": [
     "##################################################################\n",
     "# Copy this box into the first cell of a colab notebook and run it. \n",
+    "\n",
+    "# After opening VSCode, open a terminal within code and run \"bash env/vscode_extension.sh\" \n",
+    "# to install Python extensions on the colab runtime\n",
     "##################################################################\n",
     "\n",
     "# set up git credientials (needed if you want to commit)\n",
