Updates to plotting

--- a/experimental/Generate_dataset.ipynb
+++ b/experimental/Generate_dataset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -20,37 +20,14 @@
     "id": "cp98H14NO9A_",
     "outputId": "7c7f5ea4-85d7-4146-84ac-c2d5282da431"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[K     |████████████████████████████████| 2.0MB 11.9MB/s \n",
-      "\u001b[K     |████████████████████████████████| 133kB 49.0MB/s \n",
-      "\u001b[K     |████████████████████████████████| 163kB 44.8MB/s \n",
-      "\u001b[K     |████████████████████████████████| 102kB 6.3MB/s \n",
-      "\u001b[K     |████████████████████████████████| 71kB 4.4MB/s \n",
-      "\u001b[?25h  Building wheel for pathtools (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Building wheel for subprocess32 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "\u001b[K     |████████████████████████████████| 122kB 12.6MB/s \n",
-      "\u001b[?25h  Building wheel for smart-open (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "\u001b[K     |████████████████████████████████| 256kB 8.8MB/s \n",
-      "\u001b[K     |████████████████████████████████| 512kB 25.9MB/s \n",
-      "\u001b[K     |████████████████████████████████| 61kB 5.0MB/s \n",
-      "\u001b[K     |████████████████████████████████| 204kB 31.8MB/s \n",
-      "\u001b[?25h  Building wheel for configobj (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install wandb -q\n",
-    "!pip install pathy -q\n",
-    "!pip install comet_ml -q"
+    "!pip install pathy -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -147,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "background_save": true,
@@ -158,21 +135,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using colab setup\n",
-      "Cloning into '/content/learning_from_play'...\n",
-      "remote: Enumerating objects: 129, done.\u001b[K\n",
-      "remote: Counting objects: 100% (129/129), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (88/88), done.\u001b[K\n",
-      "remote: Total 2217 (delta 77), reused 82 (delta 41), pack-reused 2088\u001b[K\n",
-      "Receiving objects: 100% (2217/2217), 82.48 MiB | 7.54 MiB/s, done.\n",
-      "Resolving deltas: 100% (1314/1314), done.\n",
-      "Mounted at /content/drive\n",
-      "No pybullet installation found - which is fine if training\n",
-      "Reading data from Google Drive\n",
-      "Storage path: /content/drive/My Drive/Robotic Learning\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google.colab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-163829e66702>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# Set up working directory and libraries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mauth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Using colab setup'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mWORKING_PATH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/learning_from_play'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google.colab'"
      ]
     }
    ],
@@ -242,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -250,15 +220,7 @@
     "id": "PpaStYUOO5El",
     "outputId": "0b42486a-c090-406a-a8b7-cf56329b579b"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensorflow version 2.4.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "print(\"Tensorflow version \" + tf.__version__)"
