add template notebook for vscode-colab

--- a/env/colab_vscode.ipynb
+++ b/env/colab_vscode.ipynb
@@ -54,6 +54,18 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install wandb\n",
+    "import wandb\n",
+    "wandb.login()\n",
+    "wandb.init(project=\"learning-from-play_v2\")"
+   ]
   }
  ]
 }
