--- a/notebooks/train_dvae_plan.ipynb
+++ b/notebooks/train_dvae_plan.ipynb
@@ -105,7 +105,7 @@
     "--test_dataset UR5_slow_gripper_test\n",
     "-c\n",
     "-s DRIVE\n",
-    "-d TPU\n",
+    "-d GPU\n",
     "-b 128\n",
     "-la 512\n",
     "-le 128\n",
@@ -160,6 +160,15 @@
    ],
    "source": [
     "prep.paths = PrepPaths(prep.args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n"
    ]
   },
   {
