add option to mount gdrive

--- a/env/colab_vscode_setup.ipynb
+++ b/env/colab_vscode_setup.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "##################################################################\n",
-    "# Copy this box into the first cell of a colab notebook and run it. \n",
+    "# Open this notebook in colab or copy paste into the first cell \n",
+    "# of a colab notebook and run it. \n",
     "##################################################################\n",
     "\n",
     "# set up git credientials (needed if you want to commit)\n",
@@ -52,15 +53,7 @@
     "        branch=GIT_BRANCH\n",
     "    )\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "!pip install wandb\n",
     "import wandb\n",
     "wandb.login()\n",
